[gd_scene load_steps=4 format=3 uid="uid://buvr472mrq05r"]

[ext_resource type="Texture2D" uid="uid://bviytsxvrvum1" path="res://art/command_sprites/fight_sprite_placeholder.png" id="1_xim44"]
[ext_resource type="Script" path="res://squad_info_display.gd" id="1_xufqx"]
[ext_resource type="PackedScene" uid="uid://ba0a03ibw3jqe" path="res://clickable_icon.tscn" id="2_e0ysf"]

[node name="SquadInfoDisplay" type="VBoxContainer"]
offset_left = 392.0
offset_top = 160.0
offset_right = 490.0
offset_bottom = 262.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 2
script = ExtResource("1_xufqx")

[node name="Details" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="SquadAbbreviation" type="Label" parent="Details"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Sqd"

[node name="CurrentAction" type="TextureRect" parent="Details"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("1_xim44")
expand_mode = 3

[node name="ClickableIcon" parent="." instance=ExtResource("2_e0ysf")]
layout_mode = 2
